<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- App messages -->
    <string name="app_name">Fitcentive</string>
    <string name="title_text">Fitness at your fingertips.</string>

    <!-- Sign-in messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in...</string>
    <string name="signed_out">Signed out</string>

    <!-- Errors -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Images -->
    <string name="desc_logo_icon">Google Logo</string>
    <string name="title_activity_nav">Navigation menu</string>

    <!-- Navmenu -->
    <string name="section_data">Data</string>
    <string name="section_rewards">Rewards</string>
    <string name="section_analytics">Analytics</string>
    <string name="navigation_menu_title">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Actions -->
    <string name="action_food">Food</string>
    <string name="action_exercise">Exercise</string>
    <string name="action_events">Events</string>
    <string name="action_incentives">Incentives</string>
    <string name="action_tokens">Tokens</string>
    <string name="action_performance">Performance</string>
    <string name="action_leaderboard">Leaderboard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_food">Food</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="title_activity_incentives">Incentives</string>
    <string name="title_activity_tokens">Tokens</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_performance">Performance</string>

    <string name="hello_world">Hello World!</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>