<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fitcentive.fitcentive.NavActivity">

    <item android:id="@+id/action_food" android:title="@string/action_food"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_exercise" android:title="@string/action_exercise"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_events" android:title="@string/action_events"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_incentives" android:title="@string/action_incentives"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_tokens" android:title="@string/action_tokens"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_performance" android:title="@string/action_performance"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_leaderboard" android:title="@string/action_leaderboard"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
